--- a/front-end/index/index.html
+++ b/front-end/index/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/index.css" />
+
     <title>Sign-Me-Mario</title>
   </head>
   <body>
+    <a href="/log-in">log-in</a>
+    <h1>Petitions</h1>
+    <div class="allPetitions">
+      <div class="petitions">
+        <div class="title"></div>
+        <div class="content"></div>
+        <div class="image_link"></div>
+        <div class="goal"></div>
+      </div>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
