--- a/front-end/petition/petition.html
+++ b/front-end/petition/petition.html
@@ -9,14 +9,14 @@
     <title>Document</title>
   </head>
   <body>
-      <div class="petition"></div>
-    <h1 class="petitonName"></h1>
-        <div class="title"></div>
-        <div class="content"></div>
-        <div class="image_link"></div>
-        <div class="goal"></div>
+    <div class="petition">
+      <h1 class="petitonName"></h1>
+      <div class="title"></div>
+      <div class="content"></div>
+      <div class="image_link"></div>
+      <div class="goal"></div>
+      <div class="sign-me"></div>
     </div>
- <script src="petition.js"></script>
-
+    <script src="petition.js"></script>
   </body>
 </html>
