--- a/front-end/index/index.html
+++ b/front-end/index/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <a href="/log-in">log-in</a>
+    <a href="/create">Create Petition</a>
     <h1>Petitions</h1>
     <div class="allPetitions">
       <div class="petitions">
