authenticate front-end

--- a/front-end/index/index.html
+++ b/front-end/index/index.html
@@ -9,7 +9,7 @@
     <title>Sign-Me-Mario</title>
   </head>
   <body>
-    <a href="/log-in">log-in</a>
+    <a href="/authenticate">log-in</a>
     <a href="/create">Create Petition</a>
     <h1>Petitions</h1>
     <div class="allPetitions">
