finished register and login

--- a/front-end/authenticate/authenticate.html
+++ b/front-end/authenticate/authenticate.html
@@ -17,14 +17,14 @@
     <br />
     <input
       class="loginInput"
-      id="username"
+      id="usernameL"
       name="username"
       placeholder="username"
       required
     /><br />
     <input
     class="loginInput"
-    id="password"
+    id="passwordL"
     name="password"
     type="password"
     placeholder="Enter your password"
@@ -47,27 +47,27 @@
         <br />
         <input
           class="loginInput"
-          id="username"
+          id="usernameR"
           name="username"
           placeholder="username"
           required
         />
         <br /><input
           class="loginInput"
-          id="name"
+          id="nameR"
           name="name"
           placeholder="name"
           required
         /><br />
         <input
           class="loginInput"
-          id="email"
+          id="emailR"
           name="email"
           placeholder="email"
           required
         /><br /><input
           class="loginInput"
-          id="password"
+          id="passwordR"
           name="password"
           type="password"
           placeholder="password"
@@ -77,6 +77,6 @@
         <button class="authenticateButton" type="submit">Register</button>
       </form>
     </div>
-  
+  <script src="authenticate.js"></script>
  </body>
 </html>
