--- a/front-end/create/create.html
+++ b/front-end/create/create.html
@@ -26,11 +26,19 @@
     /><br />
     <label for="goal">Goal:</label>
     <input
-    class="loginInput"
+    class="goalInput"
     id="goal"
     name="goal"
     type="number"
-    placeholder="Sign goal"
+    placeholder="Sign goal..."
+    required/>
+    <br>
+    <label for="goal">Image Link(Optional but recommended):</label>
+    <input
+    class="imageInput"
+    id="image_link"
+    name="image_link"
+    placeholder="Link..."
     required/>
     <br>
   <button class="createButtonContainer" type="submit">
