--- a/front-end/index/index.html
+++ b/front-end/index/index.html
@@ -9,7 +9,8 @@
     <title>Sign-Me-Mario</title>
   </head>
   <body>
-    <a href="/authenticate">log-in</a>
+    <a class="logIn" href="/authenticate">log-in</a>
+    <div class="logOut">log-out</div>
     <a href="/create-petition">Create Petition</a>
     <h1>Petitions</h1>
     <div class="allPetitions">
