--- a/front-end/index/index.html
+++ b/front-end/index/index.html
@@ -11,6 +11,7 @@
   <body>
     <a class="logIn" href="/authenticate">log-in</a>
     <div class="logOut">log-out</div>
+    <h1 class="welcome"></h1>
     <a href="/create-petition">Create Petition</a>
     <h1>Petitions</h1>
     <div class="allPetitions">
