finished most of the backend, only signing left

--- a/front-end/index/index.html
+++ b/front-end/index/index.html
@@ -15,6 +15,7 @@
     <div class="allPetitions">
       <div class="petitions">
         <div class="title"></div>
+        <div class="owner"></div>
         <div class="content"></div>
         <div class="image_link"></div>
         <div class="goal"></div>
