--- a/front-end/petition/petition.html
+++ b/front-end/petition/petition.html
@@ -9,6 +9,7 @@
     <title>Document</title>
   </head>
   <body>
+    <a class="logIn" href="/">All petitions</a>
     <div class="petition">
       <h1 class="petitonName"></h1>
       <div class="title"></div>
