--- a/front-end/petition/petition.html
+++ b/front-end/petition/petition.html
@@ -9,7 +9,7 @@
     <title>Document</title>
   </head>
   <body>
-    <a class="logIn" href="/">All petitions</a>
+    <a class="home" href="/">All petitions</a>
     <div class="petition">
       <h1 class="petitonName"></h1>
       <div class="title"></div>
@@ -18,8 +18,9 @@
       <div class="goal"></div>
       <div class="sign-me">
         <form method="post" action="/sign-petition">
-          <label for="comment">Comment:(optional)</label><input type="text" name="comment" id = "comment">
-          <input style="display:none" name="petition_id" id="petition_id">
+          <label for="comment">Comment:(optional)</label
+          ><input type="text" name="comment" id="comment" />
+          <input style="display: none" name="petition_id" id="petition_id" />
           <button type="submit">Sign</button>
         </form>
       </div>
