--- a/front-end/petition/petition.html
+++ b/front-end/petition/petition.html
@@ -18,7 +18,7 @@
       <div class="sign-me">
         <form method="post" action="/sign-petition">
           <label for="comment">Comment:(optional)</label><input type="text" name="comment" id = "comment">
-          <input style="display:none" name="petition_id" id="petition_id">
+          <input type="hidden" name="petition_id" id="petition_id">
           <button type="submit">Sign</button>
         </form>
       </div>
