--- a/front-end/index/index.html
+++ b/front-end/index/index.html
@@ -9,10 +9,10 @@
     <title>Sign-Me-Mario</title>
   </head>
   <body>
-    <a class="logIn" href="/authenticate">log-in</a>
-    <div class="logOut">log-out</div>
+    <a class="logIn button" href="/authenticate">log-in</a>
+    <div class="logOut button">log-out</div>
     <h1 class="welcome"></h1>
-    <a href="/create-petition">Create Petition</a>
+    <a class="button" href="/create-petition">Create Petition</a>
     <h1>Petitions</h1>
     <div class="allPetitions">
       <div class="petitions">
