--- a/front-end/create/create.html
+++ b/front-end/create/create.html
@@ -8,46 +8,48 @@
     <link rel="stylesheet" href="create.css" />
   </head>
   <body>
-    <form action="/create-petition" method="POST" class="createPetition">
-      <label for="title">Title:</label>
-      <input
-        class="petitionTitle"
-        id="titile"
-        name="title"
-        placeholder="title..."
-        required
-      /><br />
-      <label for="content">Description:</label>
-      <input
-        class="petitionContent"
-        id="content"
-        name="content"
-        placeholder="Content..."
-        required
-      /><br />
-      <label for="goal">Goal:</label>
-      <input
-        class="goalInput"
-        id="goal"
-        name="goal"
-        type="number"
-        placeholder="Sign goal..."
-        required
-      />
-      <br />
-      <label for="goal">Image Link(Optional but recommended):</label>
-      <input
-        class="imageInput"
-        id="image_link"
-        name="image_link"
-        placeholder="Link..."
-        required
-      />
-      <br />
-      <button class="createButtonContainer" type="submit">
-        <i class="createButton">Submit</i>
-      </button>
-    </form>
+    <div class="form">
+      <form action="/create-petition" method="POST" class="createPetition">
+        <label for="title">Title:</label>
+        <input
+          class="petitionTitle"
+          id="titile"
+          name="title"
+          placeholder="title..."
+          required
+        /><br />
+        <label for="content">Description:</label>
+        <input
+          class="petitionContent"
+          id="content"
+          name="content"
+          placeholder="Content..."
+          required
+        /><br />
+        <label for="goal">Goal:</label>
+        <input
+          class="goalInput"
+          id="goal"
+          name="goal"
+          type="number"
+          placeholder="Sign goal..."
+          required
+        />
+        <br />
+        <label for="goal">Image Link(Optional but recommended):</label>
+        <input
+          class="imageInput"
+          id="image_link"
+          name="image_link"
+          placeholder="Link..."
+          required
+        />
+        <br />
+        <button class="createButtonContainer" type="submit">
+          <i class="createButton">Submit</i>
+        </button>
+      </form>
+    </div>
 
     <script src="create.js"></script>
   </body>
