--- a/front-end/create/create.html
+++ b/front-end/create/create.html
@@ -36,7 +36,7 @@
           required
         />
         <br />
-        <label for="goal">Image Link(Optional but recommended):</label>
+        <label for="goal">Image Link(Required):</label>
         <input
           class="imageInput"
           id="image_link"
